1998-11-20  Greg McGary  <gkm@gnu.org>

	* libidu/fnprint.c (print_filenames): Move ALLOCA outside loop.
	libidu/walker.c (get_lang_args): Ditto.
	src/fnid.c (main): Ditto.
	src/lid.c (report_grep, search_flinkv): Ditto.
	src/mkid.c (scan_member_file): Consolidate two ALLOCA buffers
	at inner scopes to a single buffer at an outer scope.

1998-11-18  Greg McGary  <gkm@gnu.org>

	* missing: Add file.

	* configure.in, lib/Makefile.am, libidu/Makefile.am:
	Conform macro names to automake-1.3 conventions.

	* libidu/scanners.c (id_0): Increase size and make file static.

Tue Aug  6 22:46:16 1996  Greg McGary  <gkm@g2>

	* Version 3.2 released

	* src/fid.c (get_file_index): rename shadowing local decl of
 	file_name.

	* src/lid.c (report_edit): post decrement argv when splicing in
 	ed_arg_buffer.

	* src/xtokid.c, libidu/idfile.h: #include "xstring.h" to avoid
	redeclaration of basename/dirname error.

Wed Jul 17 18:06:18 1996  Greg McGary  <gkm@g2>

	* Version 3.1 released

Sun Jun 30 13:06:18 1996  Greg McGary  <gkm@g2>

	* src/lid.c (get_query_func): remove unreachable return stmt.

	* libidu/hash.h (HASH_VACANT): cast item to (void *) for
 	comparison.

	* libidu/walker.c (append_strings_to_vector): check length of
	vector_0, not vector.

	* libidu/scanners.c (get_token_c, get_token_asm, get_token_text):
	cast return type of obstack_finish.

	* src/lid.c (radix, delimiter_style, pattern_style, key_style,
 	result_style, key_style, result_style) libidu/idfile.h
 	(separator_style): remove trailing comma from enum list.

	* src/xtokid.c: removed include of string.h.

	* src/lid.c (savetty, restoretty, linetty, chartty): define stub
 	versions if no UNIXy tty control is available.

Wed Jun 12 22:15:12 1996  Greg McGary  <gkm@g2>

	* src/lid.c, src/mkid.c, src/fnid.c (main): change default
	argv variables from char* to char[]

Mon Jun 10 15:29:19 1996  Greg McGary  <gkm@g2>

	* src/mkid.c (main): -v implies -s; handle the case where there's
	nothing to do.